--- a/ipu/templates/account/contact_us.html
+++ b/ipu/templates/account/contact_us.html
@@ -52,7 +52,7 @@
 			    </li>
 			    <li>
 			      <div class="collapsible-header" style="width: 100%;">
-			      <span><b>Sh. Shiv Ram Meena</b></span>
+			      <span><b>Mr. Pankaj Kumar Singh</b></span>
 			      <div class="right hide-on-small-only">Additional Training & Placement Officer</div>
 			      </div>
 			      <div class="collapsible-body" style="padding:10px;">
@@ -72,7 +72,7 @@
 			    </li>
 			    <li>
 			      <div class="collapsible-header" style="width: 100%;">
-			      <span><b>Sh. Rajeev Kumar Singh</b></span>
+			      <span><b>Mr. Rajeev Kumar Singh</b></span>
 			      <div class="right hide-on-small-only">Technical Assistant, Training & Placement Cell </div>
 			      </div>
 			      <div class="collapsible-body" style="padding:10px;">
