--- a/ipu/templates/account/nav-landing.html
+++ b/ipu/templates/account/nav-landing.html
@@ -445,7 +445,7 @@ footer.page-footer {
         <li><a href="{% url 'past_recruiters' %}">Recruiters</a></li>
         <li><a class='dropdown-button' href='#' data-gutter="20" data-constrainwidth="false" data-beloworigin="true"  data-activates='dropdown2'>Rules & Regulations</a></li>
         <li><a href="{% url 'stats' %}">Placement Stats</a></li>
-        <li><a class='dropdown-button' href='#' data-gutter="10" data-constrainwidth="false" data-beloworigin="true"  data-activates='dropdown5'>LOGIN/SIGNUP</a></li>
+        <li><a class='dropdown-button' href='#' data-gutter="10" data-constrainwidth="false" data-beloworigin="true"  data-activates='dropdown5'>Login / Signup</a></li>
        <!-- <li><a href="{% url 'team' %}">Meet The Team</a></li> -->
       </ul>
       </div>
@@ -465,7 +465,7 @@ footer.page-footer {
       <ul id="mobile-links">
         <li><a href="{% url 'intro' %}">Why GGSIPU</a></li>
         <li><a a class='dropdown-button' href='#' data-gutter="0" data-constrainwidth="false" data-beloworigin="true"  data-activates='dropdown3'>Procedure</a></li>
-        <li><a href="{% url 'stats' %}">Placement Stats</a></li>
+        <li><a href="{% url 'past_recruiters' %}">Recruiters</a></li>
         <li><a class='dropdown-button' href='#' data-gutter="20" data-constrainwidth="false" data-beloworigin="true"  data-activates='dropdown4'>Rules & Regulations</a></li>
         <li><a href="{% url 'stats' %}">Placement Stats</a></li>
       </ul>
