--- a/ipu/templates/stats/past_recruiters_compiled.html
+++ b/ipu/templates/stats/past_recruiters_compiled.html
@@ -56,6 +56,13 @@
 			
 
 <style type="text/css">
+
+#brand-corner:hover
+{
+  cursor: pointer;
+  color: coral !important;
+}
+
   @media (min-width:300px) and (orientation: portrait){
 
      html {
@@ -147,11 +154,6 @@ footer.page-footer {
   text-transform: capitalize;
 }
 
-
-#brand-corner:hover
-{
-  cursor: pointer;
-}
 
 
 #dropdown3 li
@@ -431,7 +433,7 @@ footer.page-footer {
 <ul id="dropdown1" class="dropdown-content">
     <li><a href="/procedure/">For Students</a></li>
     <li class="divider"></li>
-    <li><a href="#!">For Recruiters</a></li>
+    <li><a href="/procedure_recruiter/">For Recruiters</a></li>
 </ul>
 
 <ul id="dropdown2" class="dropdown-content">
@@ -443,13 +445,25 @@ footer.page-footer {
 <ul id="dropdown3" class="dropdown-content">
     <li><a href="/procedure/">For Students</a></li>
     <li class="divider"></li>
-    <li><a href="#!">For Recruiters</a></li> 
+    <li><a href="/procedure_recruiter/">For Recruiters</a></li> 
 </ul>        
 
 <ul id="dropdown4" class="dropdown-content">
     <li><a href="#!">For Students</a></li>
     <li class="divider"></li>
     <li><a href="#!">For Recruiters</a></li> 
+</ul>
+
+<ul id="dropdown5" class="dropdown-content">
+    <li><a href="/auth/#student-login-tab">Students</a></li>
+    <li class="divider"></li>
+    <li><a href="/auth/#other-login-tab">Recruiters / Faculty</a></li>
+</ul>
+
+<ul id="dropdown6" class="dropdown-content">
+    <li><a href="/auth/#student-login-tab">Students</a></li>
+    <li class="divider"></li>
+    <li><a href="/auth/#other-login-tab">Recruiters / Faculty</a></li>
 </ul>
 
 <div class="navbar-fixed">
@@ -474,6 +488,7 @@ footer.page-footer {
         <li><a href="/past_recruiters/">Recruiters</a></li>
         <li><a class='dropdown-button' href='#' data-gutter="20" data-constrainwidth="false" data-beloworigin="true"  data-activates='dropdown2'>Rules & Regulations</a></li>
         <li><a href="/stats/">Placement Stats</a></li>
+        <li><a class='dropdown-button' href='#' data-gutter="10" data-constrainwidth="false" data-beloworigin="true"  data-activates='dropdown5'>Login / Signup</a></li>
        <!-- <li><a href="/team/">Meet The Team</a></li> -->
       </ul>
       </div>
@@ -493,7 +508,7 @@ footer.page-footer {
       <ul id="mobile-links">
         <li><a href="/intro/">Why GGSIPU</a></li>
         <li><a a class='dropdown-button' href='#' data-gutter="0" data-constrainwidth="false" data-beloworigin="true"  data-activates='dropdown3'>Procedure</a></li>
-        <li><a href="/stats/">Placement Stats</a></li>
+        <li><a href="/past_recruiters/">Recruiters</a></li>
         <li><a class='dropdown-button' href='#' data-gutter="20" data-constrainwidth="false" data-beloworigin="true"  data-activates='dropdown4'>Rules & Regulations</a></li>
         <li><a href="/stats/">Placement Stats</a></li>
       </ul>
@@ -537,251 +552,6 @@ footer.page-footer {
 				</tr>
 			</thead>
 			<tbody>
-				
-					<tr>
-						<td>Adobe</td>
-						<td>M/s Infopro Word Wide</td>
-					</tr>
-				
-					<tr>
-						<td>Aricent</td>
-						<td>M/s Nucleus Software</td>
-					</tr>
-				
-					<tr>
-						<td>AVL</td>
-						<td>Media Agility</td>
-					</tr>
-				
-					<tr>
-						<td>Axtria</td>
-						<td>MediaTek</td>
-					</tr>
-				
-					<tr>
-						<td>Binary Technosys</td>
-						<td>Motherson Sumi Infotech &amp; Design Ltd.</td>
-					</tr>
-				
-					<tr>
-						<td>BlackRock</td>
-						<td>Nagarro</td>
-					</tr>
-				
-					<tr>
-						<td>BrisTL.com</td>
-						<td>National Informatics Centre</td>
-					</tr>
-				
-					<tr>
-						<td>Cadence</td>
-						<td>NEC</td>
-					</tr>
-				
-					<tr>
-						<td>Capital IQ</td>
-						<td>Nepzy</td>
-					</tr>
-				
-					<tr>
-						<td>Click Labs</td>
-						<td>Netcracker Technology Corp.</td>
-					</tr>
-				
-					<tr>
-						<td>CMC</td>
-						<td>Newgen</td>
-					</tr>
-				
-					<tr>
-						<td>Compro (Talent Grid)</td>
-						<td>NIIT Limited</td>
-					</tr>
-				
-					<tr>
-						<td>CSC</td>
-						<td>NISCAIR</td>
-					</tr>
-				
-					<tr>
-						<td>Cvent India Pvt.Ltd</td>
-						<td>Octro</td>
-					</tr>
-				
-					<tr>
-						<td>DRDO</td>
-						<td>Opera Solutions</td>
-					</tr>
-				
-					<tr>
-						<td>E &amp; Y India</td>
-						<td>Optimus</td>
-					</tr>
-				
-					<tr>
-						<td>Elucidata</td>
-						<td>Oxford University</td>
-					</tr>
-				
-					<tr>
-						<td>EMICON</td>
-						<td>Paytm</td>
-					</tr>
-				
-					<tr>
-						<td>Eninov</td>
-						<td>PerkinElmer</td>
-					</tr>
-				
-					<tr>
-						<td>ESSE XLG</td>
-						<td>Polestar</td>
-					</tr>
-				
-					<tr>
-						<td>EXL</td>
-						<td>Practo</td>
-					</tr>
-				
-					<tr>
-						<td>EXL Services</td>
-						<td>Protal Tech India</td>
-					</tr>
-				
-					<tr>
-						<td>Finoit</td>
-						<td>QA Infotech</td>
-					</tr>
-				
-					<tr>
-						<td>Flipkart</td>
-						<td>Quovantis Technolgies</td>
-					</tr>
-				
-					<tr>
-						<td>gbox</td>
-						<td>Reval</td>
-					</tr>
-				
-					<tr>
-						<td>Grape City</td>
-						<td>SafeNet</td>
-					</tr>
-				
-					<tr>
-						<td>HFFC</td>
-						<td>Samsung</td>
-					</tr>
-				
-					<tr>
-						<td>High Technology Pvt. Ltd</td>
-						<td>Samsung India Electronics</td>
-					</tr>
-				
-					<tr>
-						<td>Hike</td>
-						<td>Simply Learnt</td>
-					</tr>
-				
-					<tr>
-						<td>Hippo Innovations</td>
-						<td>Smartprix Web Pvt. Ltd.</td>
-					</tr>
-				
-					<tr>
-						<td>Hitachi</td>
-						<td>Snapdeal</td>
-					</tr>
-				
-					<tr>
-						<td>HSBC</td>
-						<td>Sunworks Consultant Pvt. Ltd.</td>
-					</tr>
-				
-					<tr>
-						<td>IBM</td>
-						<td>Tata Consultancy Services</td>
-					</tr>
-				
-					<tr>
-						<td>Impetus</td>
-						<td>Tech Mahindra</td>
-					</tr>
-				
-					<tr>
-						<td>INDIAMART</td>
-						<td>Tech Vision</td>
-					</tr>
-				
-					<tr>
-						<td>Indian Army</td>
-						<td>Texas</td>
-					</tr>
-				
-					<tr>
-						<td>Indus Valley Partners (India) Ltd.</td>
-						<td>Thorogood</td>
-					</tr>
-				
-					<tr>
-						<td>INFOGAIN</td>
-						<td>ThoughtWorks Technologies(India) Pvt. Ltd.</td>
-					</tr>
-				
-					<tr>
-						<td>Innokreat</td>
-						<td>Times Internet Ltd.</td>
-					</tr>
-				
-					<tr>
-						<td>Inox Apps.</td>
-						<td>VEDA IIT(SoCtronics)</td>
-					</tr>
-				
-					<tr>
-						<td>Intelligrape</td>
-						<td>Vinsol</td>
-					</tr>
-				
-					<tr>
-						<td>Interaa</td>
-						<td>Wasplabs Pvt. Ltd.</td>
-					</tr>
-				
-					<tr>
-						<td>ISS RETAIL</td>
-						<td>Wipro</td>
-					</tr>
-				
-					<tr>
-						<td>ItemVan Technologies Pvt. Ltd.</td>
-						<td>WNS Global Services</td>
-					</tr>
-				
-					<tr>
-						<td>Jellyfish Technologies</td>
-						<td>Wtvision</td>
-					</tr>
-				
-					<tr>
-						<td>M/S Aon Hewwit</td>
-						<td>Xerox</td>
-					</tr>
-				
-					<tr>
-						<td>M/S Azcom Infosolution</td>
-						<td>Xperia</td>
-					</tr>
-				
-					<tr>
-						<td>M/s Cognizant Technology  Solutions</td>
-						<td>Yamaha Motors</td>
-					</tr>
-				
-					<tr>
-						<td>M/s Endeavor Careers Pvt. Ltd.</td>
-						<td>Zillious</td>
-					</tr>
 				
 			</tbody>
 		</table>
