--- a/ipu/templates/student/create.html
+++ b/ipu/templates/student/create.html
@@ -1,5 +1,6 @@
 {% extends 'account/base.html' %}
 {% load material_form %}
+{% load staticfiles %}
 {% block head %}
 	<link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
 <style>
@@ -136,11 +137,10 @@ nav .button-collapse {
    		overflow-x: hidden;
    	}
    </style>
-	<a class="btn waves-effect waves-light blue" href="{% url 'logout' %}" style="position: fixed;top: 10px;right: 10px;z-index: 516516514;">Logout</a>
     <form enctype="multipart/form-data" action="{% url 'create_student' %}" method='POST' id='student-creation-form' >
         {% csrf_token %}
 		<div class="row">
-			<div class="col s12 m8 offset-m2">
+			<div class="col s10 m8 offset-m2 offset-s1">
 				<h4 class="center" style="color: goldenrod"> Create Profile </h4>
 				<div>
 	 		     	{% form form=student_creation_form %}{% endform %}
