Zip and download resumes functionality
- Add download app
- ZZZ

--- a/ipu/templates/account/procedure.html
+++ b/ipu/templates/account/procedure.html
@@ -16,17 +16,17 @@
     <ol id="steps">
       <li class="step">
         <img src="{% static 'images/process_pics/1.png' %}">
-        <p>Placement office sends invitations to companies/organizations along with relevant information.</p>
+        <p>Students are required to register on the platform in their 1st year. As a student, you are required to visit the portal regularly for any relevant updates.</p>
       </li>
       <li class="step">
         <img src="{% static 'images/process_pics/2.png' %}">
         <p>
-        Companies and organizations interested to recruit, register to the T&P website.
+        Thereafter, they are required to update their semester results, as when they receive them, generally, annually. Students should also keep updating and uploading their resume.
         </p>
       </li>
       <li class="step">
         <img src="{% static 'images/process_pics/3.png' %}">
-        <p> A placement session can be created by both the college and the company by sending association requests to each other. The job profile and elegibility criteria is decided at this step after the request is accepted.</p>
+        <p>In their third last semester, generally 6th semester, students are mandated to get their qualifications and other documents verified by their college's Training &amp; Placement Cell faculty.</p>
       </li>
       <li class="step">
         <img src="{% static 'images/process_pics/4.png' %}">
