--- a/ipu/templates/college/association_requests.html
+++ b/ipu/templates/college/association_requests.html
@@ -39,6 +39,7 @@
 
 
 <div class="container">
+	<p style="font-size: 17px" class="flow-text col s12 teal-text text-darken-4 teal lighten-5"><b>Note: </b>Before creating placement session/drive with a company, we urge you to check the company's authenticity by searching for its name on the <a target="_blank" href="http://mca.gov.in/mcafoportal/showCheckCompanyName.do">Ministry of Corporate Affairs website</a> and matching the correct LLPIN/CIN/Form 1 Ref. No.<br>If you find any company to be fradulent, please <b>block and report</b> it.<br>(You can access these facilities by clicking on <i class="material-icons">menu</i> on the top right corner.)</p>
 	<div class="col s8 offset-s2 request-content">
 		{% for ass in associations %}
 			<div class="col s12 card-panel req-card-main">
