--- a/ipu/templates/college/dsessions_snippet.html
+++ b/ipu/templates/college/dsessions_snippet.html
@@ -27,3 +27,8 @@
 		{% endfor %}
 	</ul>
 </div>
+<script>
+	$('#dsessions').find('.fa-cogs').tooltip({tooltip: 'Settings', delay: 0});
+	$('#dsessions').find('.fa-envelope').tooltip({tooltip: 'Notify', delay: 0});
+	$('#dsessions').find('.fa-file-excel-o').tooltip({tooltip: 'Excel', delay: 0});
+</script>
