--- a/ipu/templates/college/mysessions.html
+++ b/ipu/templates/college/mysessions.html
@@ -7,7 +7,7 @@
 </div>
 <div id="all-sessions" class="col s12 m9 l10">
 	{% include 'college/sessions_snippet.html' with sessions=sessions %}
-	<hr><hr><hr>
+	<div class="divider"></div>
 	{% include 'college/dsessions_snippet.html' with dsessions=dsessions %}
 </div>
 <script>
