--- a/ipu/templates/company/mysessions.html
+++ b/ipu/templates/company/mysessions.html
@@ -40,4 +40,6 @@
 {% endif %}
 <script>
 	$(".session-filter-forms-sideNav").sideNav();
+	$('#sessions').find('.fa-cogs').tooltip({tooltip: 'Settings', delay: 0});
+	$('#sessions').find('.fa-file-excel-o').tooltip({tooltip: 'Excel', delay: 0});
 </script>
