--- a/ipu/templates/faculty/home.html
+++ b/ipu/templates/faculty/home.html
@@ -320,6 +320,7 @@
 	<script type="text/javascript" src="{% static 'faculty/verify.js' %}"></script>
 	<script type="text/javascript" src="{% static 'recruitment/requests.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
+	<script type="text/javascript" src="{% static 'download/download.js' %}"></script>
 	<script src="{% static 'sweetalert/dist/sweetalert.min.js' %}"></script>
 	<script>
 		$(document).ready(function() {
