--- a/ipu/templates/recruitment/my_requests.html
+++ b/ipu/templates/recruitment/my_requests.html
@@ -28,7 +28,7 @@
 			{% endfor %}
 		</ul>
 	</div>
-	<hr><hr><hr>
+	<div class="divider"></div>
 	<h4 class="center" style="color: #337ab7; font-weight: 600">Declined Requests</h4>
 	<div id="declined" class="scrollspy">
 		<ul class="collection">
