--- a/ipu/templates/stats/past_recruiters_compiled.html
+++ b/ipu/templates/stats/past_recruiters_compiled.html
@@ -544,13 +544,8 @@ footer.page-footer {
 <div class="row" style="min-height: 477px; margin-top: 5%">
 	<div class="col s12 m10 offset-m1 l8 offset-l2">
 		<h1 class="blue-text flow-text text-darken-2 center-align"><b>Recruiters Associated With Us</b></h1>
+		<h5 class="center grey lighten-5 teal-text">Company Name (Alphabetically)</h5>
 		<table class="striped centered">
-			<thead>
-				<tr>
-					<th>Company Name</th>
-					<th>(Alphabetically)</th>
-				</tr>
-			</thead>
 			<tbody>
 				
 					<tr>
