--- a/ipu/templates/college/association_requests.html
+++ b/ipu/templates/college/association_requests.html
@@ -3,7 +3,7 @@
 	.req-card-main
 	{
 		background-color: #7d97ad;
-		height: 300px;
+	/*	height: 300px;*/
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -39,16 +39,18 @@
 
 
 <div class="container">
-	<p style="font-size: 17px" class="flow-text col s12 teal-text text-darken-4 teal lighten-5"><b>Note: </b>Before creating placement session/drive with a company, we urge you to check the company's authenticity by searching for its name on the <a target="_blank" href="http://mca.gov.in/mcafoportal/showCheckCompanyName.do">Ministry of Corporate Affairs website</a> and matching the correct LLPIN/CIN/Form 1 Ref. No.<br>If you find any company to be fradulent, please <b>block and report</b> it.<br>(You can access these facilities by clicking on <i class="material-icons">menu</i> on the top right corner.)</p>
+	<p style="font-size: 17px" class="flow-text col s12 blue-text text-darken-4 blue lighten-5"><b>Note: </b>Before creating placement session/drive with a company, we urge you to check the company's authenticity by searching for its name on the <a target="_blank" href="http://mca.gov.in/mcafoportal/showCheckCompanyName.do"><b>Ministry of Corporate Affairs website</b></a> and matching the correct <b>LLPIN/CIN/Form 1 Ref. No.</b><br>If you find any company to be fradulent, please <b>block and report</b> it.<br>(You can access these facilities by clicking on <i class="material-icons">menu</i> on the top right corner.)</p>
 	<div class="col s8 offset-s2 request-content">
 		{% for ass in associations %}
-			<div class="col s12 card-panel req-card-main">
-				<div class="card-content white-text center" id="content">
-					<span class="card-title" id="heading">Association Request</span>
-					<p> {{ ass.obj }} </p>
-					<p id="package"> Programme: {{ ass.obj.programme }}</p>
-					<p id="package"> Streams: {{ ass.streams }}</p>
-					<p id="package"> Salary: {{ ass.obj.salary }} LPA (This can be changed later)</p>
+			<div class="col s12 card-panel teal lighten-4 center-align">
+				<span class="card-title" id="heading">Association Request</span>
+				<div class="card-content purple-text text-darken-4 left-align" id="content">
+					<p> <b>Session Type:</b> {% if ass.obj.type == 'I' %}Internship{% else %}Job{% endif %}</p>
+					<p> <b>Company:</b> {{ ass.obj.company.name }}</p>
+					<p> <b>LLPIN / CIN / Form 1 Ref. No.:</b> {{ ass.obj.company.corporate_code }}</p>
+					<p> <b>Programme:</b> {{ ass.obj.programme }}</p>
+					<p> <b>Streams:</b> {{ ass.streams }}</p>
+					<p> <b>Salary:</b> {{ ass.obj.salary }} LPA</p>
 				</div>
 				<div class="card-action yellow-text">
 					<a class="waves-effect waves-light btn" href=" {% url 'createsession' %}?ass={{ ass.hashid }}">Accept</a>
