--- a/ipu/templates/faculty/home.html
+++ b/ipu/templates/faculty/home.html
@@ -109,8 +109,8 @@
 		<li class="tab col s2"><a class="active" href="#verify">Verify students</a></li>
 	{% endif %}
 	{% if perms.recruitment.handle_placement %}
-		<li class="tab col s2"><a href="#tab2">College Associations</a></li>
-		<li id="request" class="tab col s2" data-url="/college/association_requests/"><a href="#requests">Association Requests</a></li>
+<!--		<li class="tab col s2"><a href="#tab2">College Associations</a></li>-->
+		<li id="request" class="tab col s3" data-url="/college/association_requests/"><a href="#requests">College Association Requests</a></li>
 	{% endif %}
 	{% if perms.notification.manage_notification %}
 	<li id = "notification" class="tab col s2" url="{% url 'select_streams' %}"><a id="notification-anchor" href="#notifications">Notification</a></li>
@@ -191,7 +191,6 @@
 	</div>
 {% endif %}
 {% if perms.recruitment.handle_placement %}
-	<div id="tab2" class="col s12">Data 2</div>
 	<div id="requests" class="col s12">Data 3</div>
 {% endif %}
 {% if perms.notification.manage_notification %}
