--- a/ipu/templates/notification/view_solution.html
+++ b/ipu/templates/notification/view_solution.html
@@ -18,7 +18,7 @@
 	    </div>
 	    <hr/>
 	    <br>
-		        <button id = "ok-view-solution" class="btn waves-effect waves-light-right">Okay</button>
+		        <button id = "ok-view-solution" class="btn waves-effect waves-light-right">Ok</button>
 	    </div>
 	</div>
 </div>
