--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -141,7 +141,7 @@
 				<div class="col s3">
 					<ul class="tabs">
 						<li class="tab col s12"><a id = "your-notifications" class="active" href="#your-notifications-div" detail-url = "{% url 'notification_detail' %}">Your Notifications</a></li>
-						<li class="tab col s12"><a id = "help" href="#help-div">Help !</a></li>
+						<li class="tab col s12"><a id = "help" href="#help-div">Report an Issue</a></li>
 						<li class="tab col s12"><a id = "view-issues" href="#view-issues-div" url="{% url 'view_solution_list' %}">Your Issues</a></li>
 					</ul>
 				</div>
