Add disclaimer to CO signup

--- a/ipu/templates/company/create.html
+++ b/ipu/templates/company/create.html
@@ -132,6 +132,8 @@ nav .button-collapse {
 		<div class="row">
 			<div class="col s10 m8 offset-s1 offset-m2">
 				<h4 class="center" style="color: goldenrod"> Create Profile </h4>
+				<p style="font-size: 17px" class="flow-text col s12 blue-text text-darken-4 blue lighten-5"><b class="center">Disclaimer: </b><br>By registering with us, you agree that the details you've entered are correct and are in compliance with the Ministry of Corporate Affairs' records.<br>Also, you concur that should any discrepancies be found in the details, especially <b>LLPIN/CIN/Form 1 Ref. No.</b>, or any misconduct on your part is observed, we reserve the right to <span class="red-text text-darken-4">delete your account</span> without any prior notice and take any other <span class="red-text text-darken-4">stringent</span> actions against you as required.<br><b>Note: </b>These details are required only once during the registration process.</p>
+				<div class="divider"></div>
 				<div>
 	 		     	{% form form=company_creation_form %}{% endform %}
 				 </div>
