--- a/ipu/templates/account/activation_success.html
+++ b/ipu/templates/account/activation_success.html
@@ -15,6 +15,7 @@
 </style>
 	<div class="row">
 	    <h4 class="center flow-text teal-text text-accent-4"> Your email address has been verified successfully!</h4>
+	    <h4 class="center flow-text blue-text">You are now required to login and create your profile.</h4>
 		<div class="col s5 offset-s3">
 			<a class="btn btn-waves-light col s5 offset-s3" style="width: 80%" href="{% url 'auth' %}">Login &nbsp;<i class="fa fa-sign-in fa-2x"></i></a>
 		</div>
